tutorial/index.html

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -194,7 +194,7 @@
                                 <li>What is a Network?</li>
                                 <li>What are network data?</li>
                                 <li>Basic Network Metrics</li>
-                                <li>Exploring Network Metrics using Gephi&nbsp;</li>
+                                <li>Exploring Network Metrics using Gephi</li>
                             </ul>
                             <li>10 minute break</li>
                         </ul>
@@ -224,7 +224,7 @@
                     <p>
                         Laptops are not required but may be helpful for those wishing to follow along in the network analysis section. 
 
-                        Software link: <a href="http://nodexl.codeplex.com/">http://nodexl.codeplex.com/</a>
+                        Software link: <a href="https://gephi.github.io/">https://gephi.github.io/</a>
 
                     </p>
                     <p>&nbsp;</p>
