tutorial/index.html

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -327,7 +327,7 @@
                         Muhammad Aurangzeb Ahmad<br/>
                         Research Scientist, Computer Science Department, University of Minnesota<br/> 
                         E-mail: mahmad@cs.umn.edu<br/>
-                        Website: <a href="http://www.aurumahmad.com/">aurumahmad.com/</a><br/>
+                        Website: <a href="http://www.aurumahmad.com/">aurumahmad.com</a><br/>
                     </p>
                     <p>
                         <small>Muhammad Aurangzeb Ahmad is a research scientist at the University of Minnesota focusing in the area of Computational Social Science. He is also a research scientist at the GIS Technology Innovation Center, Umm Ul Qura University. He has authored over 35 research papers in the area of computational social science, data mining and social network analysis. Two of his papers have won best paper awards. He completed bachelors in Computer Science from the Rochester Institute of Technology, and master and PhD in Computer Science from University of Minnesota. He is also part of the Virtual Worlds Observatory (VWO) project, the leading project on the analysis of human behavior and socialization patterns in online virtual environments. He was also a research assistant at the Minnesota Population Center where he worked on the application of machine learning to the census data. In addition to his research at the University of Minnesota he is currently also a data scientist at the gaming and social analytics start up Ninja Metrics.</small>
