post tutorial timeslots

--- a/program/index.html
+++ b/program/index.html
@@ -123,6 +123,52 @@
             </div>
 
             <div class="row">
+                <h3>Tuesday, March 31</h3>
+                <table class="table table-bordered" style="background: #fff">
+                    <tr class="active"><th width="150">Time</th>
+                        <th><small>Tutorial Sessions</small></th>
+                    </tr>
+                    <tr><td>Morning Session<br/> 9:00am - 12:00pm</td>
+                        <td>
+                        <p><b>1. Big Data Analytics for Behavioral Modeling</b> <br/>
+                            <small>
+                                Hsuanwei Chen, Shuyuan Mary Ho, Tonia San Nicolas-Rocca
+                            </small>
+                        </p> 
+                        <p><b>2. A Tutorial on Text and Network Analysis Methods</b> <br/>
+                            <small>
+                                David Broniatowski
+                            </small>
+                        </p> 
+                        </td>
+                    </tr>
+                    <tr><td>Afternoon Session (SBP)<br/> 1:00pm - 4:00pm</td>
+                        <td>
+                        <p><b>1. Behavioral Mining, Cultural Differences and Social Network Analysis in Massive Online Games</b> <br/>
+                            <small>
+                                Muhammad Aurangzeb Ahmad, Jaideep Srivastava
+                            </small>
+                        </p> 
+                        <p><b>2. Introduction to social network and spatial data in R and Python to social scientists</b> <br/>
+                            <small>
+                                Jose Manuel Magallanes
+                            </small>
+                        </p> 
+                        </td>
+                    </tr>
+                    <tr><td>Afternoon Session (BRiMS)<br/> 1:00pm - 4:00pm</td>
+                        <td>
+                        <p><b>1. Introduction to Dynamic Network Analysis</b> <br/>
+                            <small>
+                                Geoffrey Morgan, William Frankenstein and Kathleen Carley
+                            </small>
+                        </p> 
+                        </td>
+                    </tr>
+
+                </table>
+            </div>
+            <div class="row">
                 <h3>Wednesday, April 1</h3>
                 <table class="table table-bordered" style="background: #fff">
                     <tr class="active"><th width="150">Time</th>
