--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -121,13 +121,13 @@
                         </h3>
                     </div>
                     <p>
-                        Morning (SBP):<br/>
+                        Morning (SBP) 9:00am - 12:00pm:<br/>
                         1. Big Data Analytics for Behavioral Modeling<br/>
                         2. A Tutorial on Text and Network Analysis Methods<br/><br/>
-                        Afternoon (SBP):<br/>
+                        Afternoon (SBP) 1:00pm - 4:00pm:<br/>
                         1. Behavioral Mining, Cultural Differences and Social Network Analysis in Massive Online Games<br/>
                         2. Introduction to social network and spatial data in R and Python to social scientists<br/><br/>
-                        Afternoon (BRiMS)<br/>
+                        Afternoon (BRiMS) 1:00pm - 4:00pm:<br/>
                         1. Introduction to Dynamic Network Analysis<br/>
                     </p>
                 </div>
