post registration timeslot

--- a/program/index.html
+++ b/program/index.html
@@ -128,6 +128,8 @@
                     <tr class="active"><th width="150">Time</th>
                         <th><small>Tutorial Sessions</small></th>
                     </tr>
+                    <tr><td colspan="2">Registration begins at 7:30am</td>
+                    </tr>
                     <tr><td>Morning Session<br/> 9:00am - 12:00pm</td>
                         <td>
                         <p><b>1. Big Data Analytics for Behavioral Modeling</b> <br/>
@@ -173,6 +175,8 @@
                 <table class="table table-bordered" style="background: #fff">
                     <tr class="active"><th width="150">Time</th>
                         <th><small>Sessions</small></th>
+                    </tr>
+                    <tr><td colspan="2">Registration begins at 7:30am</td>
                     </tr>
                     <tr><td>Session 1 (SBP) <br/> 8:30am</td>
                         <td>
@@ -300,6 +304,8 @@
                 <table class="table table-bordered" style="background: #fff">
                     <tr class="active"><th width="150">Time</th>
                         <th><small>Sessions</small></th>
+                    </tr>
+                    <tr><td colspan="2">Registration begins at 7:30am</td>
                     </tr>
                     <tr><td>Session 4 (SBP) <br/> 8:30am</td>
                         <td>
