update photos on main page

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					<div class="flex-video widescreen">
-                        <img src="assets/img/studentsupport.jpg" class="img-thumbnail" />
-                        <p class="captions">Awardees</p>
+                        <img src="assets/img/registration.jpg" class="img-thumbnail" />
+                        <p class="captions">Registration Booth</p>
                     </div>
                     <br />
                     <div class="flex-video widescreen">
-                        <img src="assets/img/awards.jpg" class="img-thumbnail" />
-                        <p class="captions">Roundtable Discussions</p>
+                        <img src="assets/img/tutorial.jpg" class="img-thumbnail" />
+                        <p class="captions">Tutorial</p>
                     </div>
 				</div>
 			</div><! --/row -->
