--- a/committee/index.html
+++ b/committee/index.html
@@ -147,7 +147,7 @@
                     <h3>Steering Committee</h3>
                 </div>
                 <ul class="square_list">
-                    <li><b>John Salerno</b>, AFRL à Exelis</li>
+                    <li><b>John Salerno</b>, Exelis</li>
                     <li><a href="http://www.public.asu.edu/~huanliu/"><b>Huan Liu</b></a>, Arizona State University</li>
                     <li><b><a href="http://www2.hawaii.edu/~sunki/">Sun Ki Chai</a></b>, University of Hawaii</li>
                     <li><b><a href="http://obssr.od.nih.gov/about_obssr/staff/patricia_mabry_bio.aspx">Patricia Mabry</a></b>, National Institute of Health</li>
@@ -183,7 +183,7 @@
                     <li><b><a href="http://www.ce.rit.edu/people/yang/">Shanchieh (Jay) Yang</a></b>, Rochester Institute of Technology</li>
                     <li><b>Nathan D. Bos</b>, Johns Hopkins University/Applied Physics Lab</li>
                     <li><b>Ariel M. Greenberg</b>, Johns Hopkins University/Applied Physics Lab</li>
-                    <li><b>John Salerno</b>, AFRL à Exelis</li>
+                    <li><b>John Salerno</b>, Exelis</li>
                     <li><a href="http://www.public.asu.edu/~huanliu/"><b>Huan Liu</b></a>, Arizona State University</li>
                     <li><b>Donald Adjeroh</b>, West Virginia University</li>
                     <li><b><a href="http://katychuang.com">Katherine Chuang</a></b>, Soostone Inc.<br></li>
