--- a/program/index.html
+++ b/program/index.html
@@ -434,7 +434,7 @@
                     <tr>
                         <td>Session 7 (BRiMs) <br/>9:30am</td>
                         <td>
-                            <p><b>Modeling Emotion and Perception (Session Chair: Ariel GreenBerg)</b></p>
+                            <p><b>Modeling Emotion and Perception (Session Chair: Ariel Greenberg)</b></p>
                             <p><b>1. Semantic labelling of objects in a simulated environment</b> <br/>
                                 <small>
                                     Ralph Brewer and Maryanne Fields
