--- a/committee/index.html
+++ b/committee/index.html
@@ -131,7 +131,7 @@
                     <h3>Conference Co-Chairs</h3>
                 </div>
                 <ul class="square_list">
-                    <li><b><a href="http://www.ecu.edu/cs-cas/soci/jeffrey-johnson.cfm">Jeffrey Johnson</a></b>, University of Florida</li>
+                    <li><b><a href="http://www.jeffreycjohnson.org/">Jeffrey Johnson</a></b>, University of Florida</li>
                 </ul>
 
                 <div class="title">
@@ -177,7 +177,7 @@
 
                 <ul class="square_list">
                     <li><a href="http://www.css.gmu.edu/?q=node/16"><b>Claudio Cioffi-Revilla</b></a>, George Mason University</li>
-                    <li><b><a href="http://www.ecu.edu/cs-cas/soci/jeffrey-johnson.cfm">Jeffrey Johnson</a></b>, University of Florida</li>
+                    <li><b><a href="http://www.jeffreycjohnson.org/">Jeffrey Johnson</a></b>, University of Florida</li>
                     <li><b><a href="http://www.css.gmu.edu/node/8?q=node/12">William G. Kennedy</a></b>, George Mason University</li>
                     <li><b><a href="http://ualr.edu/nxagarwal/">Nitin Agarwal</a></b>, University of Arkansas</li>
                     <li><b><a href="http://www.ce.rit.edu/people/yang/">Shanchieh (Jay) Yang</a></b>, Rochester Institute of Technology</li>
