add keynote titles

--- a/program/index.html
+++ b/program/index.html
@@ -212,7 +212,7 @@
                     <tr>
                         <td>10:15am</td>
                         <td>
-                        Keynote by Prof. Scott Page
+                        Keynote by Prof. Scott Page - "Something Beyond Belief: Behavioral Models of Culture"
                         </td>
                     </tr>
                     <tr>
@@ -362,7 +362,7 @@
                     <tr>
                         <td>11:15am</td>
                         <td>
-                        Keynote (SBP) Prof. Phil Bourne
+                        Keynote (SBP) Prof. Phil Bourne 
                         </td>
                     </tr>
                     <tr>
@@ -374,7 +374,7 @@
                     <tr>
                         <td>2:00pm</td>
                         <td>
-                        Keynote (SBP) Prof. Mark Newman
+                        Keynote (SBP) Prof. Mark Newman - "Contact networks, behavior, and the spread of disease"
                         </td>
                     </tr>
                     <tr>
@@ -461,7 +461,7 @@
                     <tr>
                         <td>11:00am</td>
                         <td>
-                        Keynote (BRiMs) CDR Joseph Cohn
+                        Keynote (BRiMs) CDR Joseph Cohn - "Enhancing Intuitive Decision Making Across Levels: From Individuals to Societies"
                         </td>
                     </tr>
                     <tr>
