--- a/program/index.html
+++ b/program/index.html
@@ -362,7 +362,7 @@
                     <tr>
                         <td>11:15am</td>
                         <td>
-                        Keynote (SBP) Prof. Phil Bourne 
+                        Keynote (SBP) Prof. Phil Bourne - "Data Science at NIH and its Relationship to Social Computing, Behavioral-Cultural Modeling, & Prediction"
                         </td>
                     </tr>
                     <tr>
